--- a/angular.json
+++ b/angular.json
@@ -27,8 +27,7 @@
               }
             ],
             "styles": [
-              
-              
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -87,8 +86,7 @@
               }
             ],
             "styles": [
-             
-              
+              "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.css"
             ],
             "scripts": []
