--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/cdk": "^19.2.15",
     "@angular/common": "^19.2.10",
     "@angular/compiler": "^19.2.10",
     "@angular/core": "^19.2.10",
     "@angular/forms": "^19.2.10",
+    "@angular/material": "^19.2.15",
     "@angular/platform-browser": "^19.2.10",
     "@angular/platform-browser-dynamic": "^19.2.10",
     "@angular/router": "^19.2.10",
+    "@primeng/themes": "^19.1.2",
     "bootstrap": "^5.3.6",
+    "primeicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
